--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
     "@stitches/react": "^1.2.8",
+    "draft-js": "^0.11.7",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
