--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@stitches/react": "^1.2.8",
     "draft-js": "^0.11.7",
     "formik": "^2.2.9",
+    "jose": "^4.8.3",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
