--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-popover": "^0.1.6",
     "@stitches/react": "^1.2.8",
     "draft-js": "^0.11.7",
     "formik": "^2.2.9",
@@ -18,6 +19,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tabler-icons-react": "^1.52.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
