--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-popover": "^0.1.6",
     "@stitches/react": "^1.2.8",
+    "date-fns": "^2.28.0",
     "draft-js": "^0.11.7",
     "formik": "^2.2.9",
     "jose": "^4.8.3",
