--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lexical/react": "^0.3.7",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-popover": "^0.1.6",
     "@stitches/react": "^1.2.8",
+    "@types/draft-js": "^0.11.9",
     "date-fns": "^2.28.0",
     "draft-js": "^0.11.7",
     "formik": "^2.2.9",
     "jose": "^4.8.3",
     "jwt-decode": "^3.1.2",
+    "lexical": "^0.3.7",
+    "markdown-to-jsx": "^7.1.7",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tabler-icons-react": "^1.52.0",
+    "yjs": "^13.5.39",
     "yup": "^0.32.11"
   },
   "devDependencies": {
