--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-popover": "^0.1.6",
     "@stitches/react": "^1.2.8",
     "@types/draft-js": "^0.11.9",
+    "cookies-next": "^2.1.1",
     "date-fns": "^2.28.0",
     "draft-js": "^0.11.7",
     "formik": "^2.2.9",
